<resources>

    <!-- SignInFragment -->
    <string name="action_sign_up">SIGN UP</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="change_server">Change server</string>
    <string name="what_should_i_know">WHAT I SHOULD KNOW?</string>

    <!-- ConfirmEmailFragment -->
    <string name="confirm_code_message">We\'ve sent the code to your email address \n%s</string>
    <string name="havent_received_code">Haven\'t received the code?</string>
    <string name="code">Code</string>
    <string name="confirm_code">Confirm</string>

    <!-- RegistrationStep1Fragment -->
    <string name="action_next">NEXT</string>
    <string name="first_password_hint">Password (min 6 symbols)</string>
    <string name="seond_password_hint">Confirm your password</string>
    <string name="complete_your_profile">Complete your profile</string>

    <!-- RegistrationStep2Fragment -->
    <string name="create_hint_for_password_recovery">Create hint for password recovery</string>
    <string name="hint_for_your_password">Hint for your password</string>

    <!-- RegistrationStep3Fragment -->
    <string name="fullname_hint">Full name</string>

    <!-- RegistrationStep4Fragment -->
    <string name="submit">SUBMIT</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="please_select_country_code_and_enter_number">Please select your country code and enter your mobile phone number.</string>

    <!-- ConfirmMobilePhoneFragment -->
    <string name="confirm_mobile_phone_code_message">Please enter the 4-digit code just sent to your mobile phone %s</string>

    <!-- CameraSelfieFragment -->
    <string name="take_a_selfie">Take a selfie</string>
    <string name="nice_submit">NICE, SUBMIT</string>

    <!-- SubmitFragment -->
    <string name="dear_it_checked_submit">Dear %s you are about being reviewed by our KYC team.</string>

    <!-- DepositFragment -->
    <string name="deposit_securely">DEPOSIT SECURELY</string>
    <string name="desposit_securely_text">Deposit bitcoins and digital assets to multisig wallets with an encrypted private key</string>

    <string name="wallet_item">Wallets</string>
    <string name="exchange_item">Exchange</string>
    <string name="history_item">History</string>
    <string name="setting_item">Settings</string>
    <string name="app_name">Lykke Wallet</string>
    <string name="lykke_api_test">lykke-api-test</string>
    <string name="lykke_api_dev">lykke-api-dev</string>
    <string name="lykke_api_demo">lykke-api-demo</string>
    <string name="app_version">Version %1$s (%2$d)</string>
    <string name="api_app_version">Version %1$s (%2$d), API %3$s</string>

    <string name="wallet_title">WALLETS</string>
    <string name="trading_title">EXCHANGE</string>
    <string name="history_title">HISTORY</string>
    <string name="setting_title">SETTINGS</string>
    <string name="credit_card">VISA/MASTERCARD</string>
    <string name="lykke_title">LYKKE</string>
    <string name="no_info_cards">Cards not added</string>
    <string name="no_info_coins">Coins not added</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="drawer_open">Open</string>
    <string name="pin_entered">PIN validation...</string>
    <string name="sending_order">Sending order...</string>
    <string name="drawer_close">Close</string>
    <string name="deal_result">PURCHASED!</string>
    <string name="asset">Asset name</string>
    <string name="units">Units purchased</string>
    <string name="purchace_price">Execution price</string>
    <string name="purchace_comission">Commission paid</string>
    <string name="purchace_total_cost">Total cost</string>
    <string name="purchace_blockchain">Blockchain settlement</string>
    <string name="amount">Amount</string>
    <string name="asset_name">Asset name</string>
    <string name="purchace_blockchain_progress">In progress</string>
    <string name="purchace_position">Position</string>
    <string name="purchace_close">CLOSE</string>
    <string name="purchace_share">SHARE</string>
    <string name="blockchain_title">BLOCKCHAIN EXPLORER</string>
    <string name="hash">Hash</string>
    <string name="date">Date</string>
    <string name="confirm">Confirm.</string>
    <string name="block">Block</string>
    <string name="height">Height</string>
    <string name="sender">Sender ID</string>
    <string name="asset_id">Asset ID</string>
    <string name="quantity">Quantity</string>
    <string name="url">URL</string>

    <string name="email_hint">Email</string>
    <string name="mobile_hint">Phone number</string>
    <string name="proedure_approve">KYC PROCEDURE</string>
    <string name="dear_it_checked">Dear %s, your information is being reviewed by our KYC team.\nAs soon as process is completed we will inform you by email.</string>
    <string name="succes_setup_document">Dear %s, thank you for your patience. Your documents are in order. Lets set up our security.</string>
    <string name="reupdate_doc">Dear %s, we\'re terribly sorry, but our compliance department have not accepted some of your documents. Please upload them one more time.</string>
    <string name = "inside">Login</string>
    <string name="action_log_in">LOG IN</string>
    <string name="send_document">SUBMIT DOCUMENTS</string>
    <string name="wrong_pin">Pins do not match</string>
    <string name="re_enter_pin">Re-enter pin</string>
    <string name="server_error">Server error</string>

    <string name="ok">OK</string>
    <string name="congrac">CONGRATULATIONS!</string>
    <string name="registration">REGISTRATION</string>
    <string name="login">LOGIN</string>
    <string name="reshoot">PLEASE, RESHOOT</string>
    <string name="save">NICE, SUBMIT</string>
    <string name="make_selfie">Make a selfie</string>
    <string name="id_card">Take a photo of your passport or other ID</string>
    <string name="bitcoin">BITCOIN</string>
    <string name="deposit_bitcoin">DEPOSIT</string>
    <string name="withdraw">WITHDRAW</string>
    <string name="deposit">DEPOSIT</string>
    <string name="trading_wallet">TRADING WALLET</string>
    <string name="withdraw_funds">WITHDRAW FUNDS</string>
    <string name="enter_address">Enter the bitcoin address</string>
    <string name="bitcoin_wallet">Bitcoin Wallet</string>
    <string name="paste">Paste</string>
    <string name="scan">Scan QR-code</string>
    <string name="proceed">Proceed</string>
    <string name="funds_wallet">The funds from this wallet will be charged only for transaction</string>
    <string name="wallet_address">Wallet Address</string>
    <string name="email_me">EMAIL ME</string>
    <string name="copy">COPY</string>
    <string name="copied">Copied.</string>
    <string name="check_email">Please check your %s mailbox.</string>
    <string name="proof_adress">Take a photo of your Proof of Address</string>
    <string name="waiting">Waiting...</string>
    <string name="it_was_created">You can change your credit card information at any time</string>
    <string name="continue_string">CONTINUE</string>
    <string name="success_created">CARD SUCCESSFULLY LINKED</string>
    <string name="get_started">GET STARTED</string>
    <string name="okay_understand"> OKAY, I UNDERSTAND</string>
    <string name="oops">OOPS!</string>
    <string name="cancel_waiting">Tap to cancel the upload operation</string>
    <string name="was_created">LYKKE WALLET WAS SUCCESSFULLY CREATED!</string>
    <string name="info_oops">Dear %s, we\'re terribly sorry, but Lykke Wallet can\'t be created based on the KYC information that you have provided.</string>
    <string name="code_generated">We have generated your private key.</string>
    <string name="not_authorized">401 Not authorized</string>
    <string name="connect_to_server">Connection to server.\nPlease wait...</string>
    <string name="check_documents">Documents validation.\nPlease wait...</string>
    <string name="deposit_wallet">Deposit %s wallet</string>
    <string name="add_card">Add a new card</string>
    <string name="only_demo">DEMO Only. Do not enter real back cards</string>
    <string name="money_will_taken">The funds from this card will be charged only for the transaction</string>
    <string name="number_card">Card number</string>
    <string name="month_year">MM/YY</string>
    <string name="card_name">Name on card</string>
    <string name="cvv">CVV</string>
    <string name="create_card">ADDED CARDS</string>
    <string name="personal_data">View Personal Data</string>
    <string name="personal_data_title">PERSONAL DATA</string>
    <string name="exit">Log out from </string>
    <string name="push">Push notifications</string>
    <string name="base_asset">Base asset</string>
    <string name="check_orders">Sign orders with PIN</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone">Contact Phone</string>
    <string name="country">Country</string>
    <string name="zip">Zip</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="create_order">Order confirmation alert</string>
    <string name="push_title">PUSH NOTIFICATIONS</string>
    <string name="new_asset">New asset alert</string>
    <string name="sign_orders_was_changed">Sign orders was changed</string>
    <string name="base_asset_title">BASE ASSET</string>
    <string name="select_an_asset">Select an asset</string>
    <string name="issuer">Issuer/Asset</string>
    <string name="price">Price</string>
    <string name="change">Change</string>
    <string name="labelAssetClass">Asset class</string>
    <string name="labelPopular">Popularity index</string>
    <string name="labelDescription">Description</string>
    <string name="labelIssuerName">Issuer name</string>
    <string name="labelNumberOfCoins">Number of coins</string>
    <string name="buy_rate">BUY AT  </string>
    <string name="volume">Volume</string>
    <string name="bitcoin_address">Bitcoin address</string>
    <string name="total_cost">Total cost</string>
    <string name="checkout">CHECKOUT</string>
    <string name="buy">BUY</string>
    <string name="cancel">CANCEL</string>
    <string name="order_summary">ORDER SUMMARY</string>
    <string name="exchange_in">BUY</string>
    <string name="exchange_out">SELL</string>
    <string name="cash_in">CASH IN</string>
    <string name="cash_out">CASH OUT</string>
    <string name="cash_in_name">Wallet cash in</string>
    <string name="cash_out_name">Wallet cash out</string>
    <string name="exchange_in_name">Buy</string>
    <string name="exchange_out_name">Sell</string>
    <string name="unit_purchaesed">Unit purchased</string>
    <string name="execution_price">Execution price</string>
    <string name="commission_paid">Commission paid</string>
    <string name="sell_at_price">SELL AT </string>
    <string name="sell">SELL</string>
    <string name="info_sell">I want to sell %1$s for %2$s</string>
    <string name="info_buy">I want to buy %1$s for %2$s</string>
    <string name="hold_up">HOLD UP!</string>
    <string name="understand">OKAY, I UNDERSTOOD</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="call_support">CALL SUPPORT</string>
    <string name="num_attempts_left">%d attempts left</string>
</resources>

