<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relBackground"
    android:background="@color/white">

    <TextView
        android:id="@+id/confirmCodeMessage"
        android:text="@string/confirm_code_message"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/codeEditText"
        android:layout_width="310dp"
        android:layout_height="43dp"
        android:hint="@string/code"
        android:layout_marginTop="125dp"
        android:paddingBottom="6dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:background="@drawable/filed_background"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:textColor="@color/grey_text"
        android:background="@drawable/submitbutton"
        android:id="@+id/buttonAction"
        android:text="@string/action_sign_up"
        android:layout_below="@+id/codeEditText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_below="@id/buttonAction"
        android:text="@string/havent_received_code"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/blue_color"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_below="@+id/buttonAction"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:visibility="gone" />
</RelativeLayout>