<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relBackground"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvInfo"
        android:textSize="18sp"
        android:visibility="visible"
        android:text="@string/complete_your_profile"
        android:layout_marginTop="15dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <com.lykkex.LykkeWallet.gui.customviews.StepsIndicator_
        android:id="@+id/stepsIndicator"
        android:layout_below="@id/tvInfo"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <EditText
        android:id="@+id/codeEditText"
        android:layout_width="310dp"
        android:layout_height="43dp"
        android:hint="@string/code"
        android:layout_marginTop="125dp"
        android:paddingBottom="6dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:inputType="number"
        android:background="@drawable/filed_background"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_marginTop="30dp"
        android:enabled="false"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:textColor="@color/grey_text"
        android:background="@drawable/submitbutton"
        android:id="@+id/buttonAction"

        android:text="@string/confirm_code"
        android:layout_below="@+id/codeEditText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/confirmCodeMessage"
        android:text="@string/confirm_mobile_phone_code_message"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/buttonAction"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvHaventReceivedCode"
        android:layout_below="@id/confirmCodeMessage"
        android:text="@string/havent_received_code"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/blue_color"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_below="@+id/buttonAction"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:visibility="gone" />
</RelativeLayout>